Cambios en las urls

--- a/en/facilities.html
+++ b/en/facilities.html
@@ -42,14 +42,14 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="logo" href="/en/index.html"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
+        <a class="logo" href="/en/"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
         <div class="collapse navbar-collapse" id="nav">
           <ul id="navbarNav" class="navbar-nav m-0 ml-lg-auto p-3 p-lg-0">
             <li class="d-inline d-lg-none px-3 py-2 menu-close">
               <button data-toggle="collapse" data-target="#nav" class="close float-right">&times;</button>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-truncate" href="index.html">Home</a>
+              <a class="nav-link text-truncate" href="/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-truncate" href="about-us.html">About Us</a>
@@ -64,7 +64,7 @@
               <a class="nav-link text-truncate contact-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item language d-flex align-items-center">
-              <a class="nav-link text-truncate m-0" href="https://matiasmd8610.github.io/TCC_Puente/"><i class="material-icons">language</i>ESP</a>
+              <a class="nav-link text-truncate m-0" href="/"><i class="material-icons">language</i>ESP</a>
             </li>
           </ul>
         </div>
@@ -152,7 +152,7 @@
           <div class="col-lg-2">
             <ul class="footer-nav mb-0">
               <li class="nav-item">
-                <a class="text-truncate" href="index.html">Home</a>
+                <a class="text-truncate" href="/en/">Home</a>
               </li>
               <li class="nav-item">
                 <a class="ntext-truncate" href="about-us.html">About Us</a>
