--- a/nosotros.html
+++ b/nosotros.html
@@ -42,14 +42,14 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="logo" href="index.html"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
+        <a class="logo" href="/"><h1 class="sr-only">Terminal de Combustible Campana</h1></a>
         <div class="collapse navbar-collapse" id="nav">
           <ul id="navbarNav" class="navbar-nav m-0 ml-lg-auto p-3 p-lg-0">
             <li class="d-inline d-lg-none px-3 py-2 menu-close">
               <button data-toggle="collapse" data-target="#nav" class="close float-right">&times;</button>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-truncate" href="index.html">Inicio</a>
+              <a class="nav-link text-truncate" href="/">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-truncate" href="nosotros.html">Nosotros</a>
@@ -64,7 +64,7 @@
               <a class="nav-link text-truncate contact-link" href="#footer">Contacto</a>
             </li>
             <li class="nav-item language d-flex align-items-center">
-              <a class="nav-link text-truncate m-0" href="en/"><i class="material-icons">language</i>ENG</a>
+              <a class="nav-link text-truncate m-0" href="/en/"><i class="material-icons">language</i>ENG</a>
             </li>
           </ul>
         </div>
@@ -150,7 +150,7 @@
           <div class="col-lg-2">
             <ul class="footer-nav mb-0">
               <li class="nav-item">
-                <a class="text-truncate" href="index.html">Inicio</a>
+                <a class="text-truncate" href="/">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="ntext-truncate" href="nosotros.html">Nosotros</a>
