--- a/en/facilities.html
+++ b/en/facilities.html
@@ -49,7 +49,7 @@
               <button data-toggle="collapse" data-target="#nav" class="close float-right">&times;</button>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-truncate" href="/">Home</a>
+              <a class="nav-link text-truncate" href="/en/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-truncate" href="about-us.html">About Us</a>
