Update en sección Nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -83,34 +83,51 @@
         </div>
       </div>
 
-      <div class="container pt-md-4 mb-5">
+      <div class="container pt-md-4 mb-4 mb-lg-5">
         <div class="row">
 
-          <div class="col-md-6 pr-md-4" data-aos="fade-right" data-aos-duration="1500" data-aos-delay="300">
-            <p class="text-bigger">
+          <div class="col-md-12 pr-md-4" data-aos="fade-right" data-aos-duration="1500" data-aos-delay="300">
+            <p class="text-bigger mb-3">
               Somos una compañía de capitales argentinos que,<span> desde 2015</span> gestiona comercialmente la Terminal de almacenamiento de combustibles y productos hidrocarburíferos de Pobater S.A. para empresas de primera línea, tanto locales como internacionales.
             </p>
-            <br>
-            <p class="text-bigger">
+            <p class="text-bigger mb-3">
               Invertimos permanentemente en <span>tecnología y capacitación</span> para asegurar la <span>eficiencia y agilidad </span>de nuestra operación, aplicando los más altos estándares internacionales de seguridad y cuidado del ambiente.
             </p>
-          </div>
-
-          <div class="col-md-6 pl-md-4" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="600">
-            <p class="text-bigger">
+            <p class="text-bigger mb-3">
               Nuestra ubicación estratégica -en el ingreso al canal Hidrovía del río Paraná- y el enfoque integral de nuestro servicio, nos posiciona como proveedor de referencia en Campana (provincia de Buenos Aires), municipio localizado a una distancia equidistante del núcleo productivo en el cual se centra
               <span>alrededor del 70% </span> de la demanda doméstica de productos refinados de la Argentina.
             </p>
-              <br>
             <p class="text-bigger">
               Somos el <span>socio estratégico </span>para las empresas que buscan ampliar su capacidad y potenciar su logística en la región.
             </p>
           </div>
+
         </div>
       </div>
 
       <div class="container">
-        <hr class="separator pt-4 my-4 my-lg-5 pt-md-5 border-top">
+        <hr class="separator pt-4 my-3 my-lg-3 pt-md-4 border-top">
+      </div>
+
+      <div class="container pt-4 pb-4 mb-md-4 mb-lg-5 director">
+        <div class="d-lg-flex">
+
+          <div data-aos="fade-right" data-aos-duration="1500" data-aos-delay="300">
+            <img class="d-block" src="images/federico_muller.jpg" alt="Federico Müller" width="380">
+          </div>
+          <div class="director-text px-lg-5" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="600">
+            <h3 class="uppercase">Federico Müller</h3>
+            <h4>Director de Negocios</h4>
+            <div class="mail-director d-flex">
+              <i class="material-icons" aria-label="e-mail">mail_outline</i><a href="mailto:federico.muller@tccar.com.ar">federico.muller@tccar.com.ar</a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="container">
+        <hr class="separator pt-4 my-3 my-lg-3 pt-md-5 border-top">
       </div>
 
       <div class="container mb-5 text-center p-lg-4 pt-3 pt-lg-5 bg-light rounded">
