--- a/en/about-us.html
+++ b/en/about-us.html
@@ -86,7 +86,7 @@
       <div class="container pt-md-4 mb-5">
         <div class="row">
 
-          <div class="col-md-6 pr-md-4" data-aos="fade-right" data-aos-duration="1500" data-aos-delay="300">
+          <div class="col-md-12 pr-md-4" data-aos="fade-right" data-aos-duration="1500" data-aos-delay="300">
             <p class="text-bigger">
               We are an Argentine capital company that<span> since 2015</span> has commercially managed the Pobater S.A. Fuel and Hydrocarbon Products Storage Terminal. for first-line companies, both local and international.
             </p>
@@ -94,9 +94,6 @@
             <p class="text-bigger">
               We permanently invest in <span>technology and training</span> to ensure the <span>efficiency and agility </span>of our operation, applying the highest international standards of safety and care for the environment.
             </p>
-          </div>
-
-          <div class="col-md-6 pl-md-4" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="600">
             <p class="text-bigger">
               Our strategic location -at the entrance to the Hidrovía channel of Paraná River- and the comprehensive approach of our service, getting position as a reference provider in Campana (Buenos Aires Province) a state located at an equidistant distance from the productive nucleus which centers<span>around 70% </span> of the domestic demand for refined products in Argentina.
             </p>
@@ -109,7 +106,28 @@
       </div>
 
       <div class="container">
-        <hr class="separator pt-4 my-4 my-lg-5 pt-md-5 border-top">
+        <hr class="separator pt-4 my-3 my-lg-3 pt-md-4 border-top">
+      </div>
+
+      <div class="container pt-4 pb-4 mb-md-4 mb-lg-5 director">
+        <div class="d-lg-flex">
+
+          <div data-aos="fade-right" data-aos-duration="1500" data-aos-delay="300">
+            <img class="d-block" src="../images/federico_muller.jpg" alt="Federico Müller" width="380">
+          </div>
+          <div class="director-text px-lg-5" data-aos="fade-left" data-aos-duration="1500" data-aos-delay="600">
+            <h3 class="uppercase">Federico Müller</h3>
+            <h4>Business Manager</h4>
+            <div class="mail-director d-flex">
+              <i class="material-icons" aria-label="e-mail">mail_outline</i><a href="mailto:federico.muller@tccar.com.ar">federico.muller@tccar.com.ar</a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="container">
+        <hr class="separator pt-4 my-3 my-lg-3 pt-md-5 border-top">
       </div>
 
       <div class="container pt-4 mb-5 text-center p-lg-4 pt-3 pt-lg-5 bg-light rounded">
